# python-playground

./: .gitignore  ESSENTIALS.md  README.md  py-playground.sublime-project
building-with-fast-api/: .python-version  PERFORMANCE.md  PROBLEM.md  PROBLEMS.md  README-NEW.md  README.md  api.py  pyproject.toml
building-with-fast-api/01-hello-world/: api.py  hello.py
building-with-fast-api/02-routing/: todo.py
building-with-fast-api/bruno/collection/: bruno.json  collection.bru  hello-world.bru  to-do-list-delete-all.bru  to-do-list-delete-id.bru  to-do-list-get-id.bru  to-do-list-get.bru  to-do-list-post.bru  to-do-list-put-id.bru
building-with-fast-api/chapter_01/: api.py
building-with-fast-api/chapter_02/: api.py  model.py  todo.py
building-with-fast-api/chapter_03/: api.py  model.py  todo.py
building-with-fast-api/chapter_04/: api.py  model.py  todo.py
building-with-fast-api/chapter_04/templates/: home.jinja  todo.jinja
building-with-fast-api/chapter_05/: main.py
building-with-fast-api/chapter_05/models/: users.py
building-with-fast-api/chapter_05/routes/: events.py  users.py
building-with-fast-api/chapter_06/: main.py  planner.db
building-with-fast-api/chapter_06/database/: connection.py
building-with-fast-api/chapter_06/models/: events.py
building-with-fast-api/chapter_06/mongodb/: main.py
building-with-fast-api/chapter_06/routes/: events.py
building-with-fast-api/chapter_06/sqlmodel/: main.py  planner.db
building-with-fast-api/chapter_07/: main.py  planner.db
building-with-fast-api/chapter_07/_bin/: questions-to-note-for-fastapi-book.txt
building-with-fast-api/chapter_07/auth/: authenticate.py  jwt_handler.py
building-with-fast-api/chapter_07/database/: connection.py  database.py
building-with-fast-api/chapter_07/models/: events.py  users.py
building-with-fast-api/chapter_07/routes/: events.py  users.py
building-with-fast-api/chapter_08/: .gitignore  main.py  piccolo_conf.py  planner.db  planner.db-shm  planner.db-wal
building-with-fast-api/chapter_08/auth/: authenticate.py  hash_password.py  jwt_handler.py
building-with-fast-api/notes/: Anki.md  bombardier-errors.md  making-life-simpler.md
(+318 files in other folders)
