[project]
name = "building-with-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.5",
    "mypy>=1.14.1",
    "passlib[bcrypt]>=1.7.4",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "python-jose>=3.4.0",
    "sqlmodel>=0.0.22",
    "uuid>=1.30",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = []

[tool.pyright]
strict = ["."]
exclude = ["reactivex", ".venv"]
