[project]
name = "building-with-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.5",
    "logging>=0.4.9.6",
    "nanoid>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "peewee>=3.17.9",
    "pydantic-settings>=2.8.1",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "python-jose>=3.4.0",
    "shortuuid>=1.0.13",
    "sqlite-utils>=3.38",
    "sqlmodel>=0.0.22",
    "svix-ksuid>=0.6.2",
    "uuid>=1.30",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = []

[tool.pyright]
strict = ["."]
exclude = ["reactivex", ".venv"]
