[project]
name = "building-with-fast-api"
version = "1.12.12"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator",
    "fastapi[standard]>=0.115.6",
    "piccolo[orjson,sqlite]>=1.28.0",
    "python-decouple>=3.8.0",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "sqlite-utils>=3.38",
    "pyright>=1.1.406",
    "jinja2>=3.1.5",
    "logging>=0.4.9.6",
    "nanoid>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "peewee>=3.17.9",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.4",
    "shortuuid>=1.0.13",
    "sqlmodel>=0.0.22",
    "svix-ksuid>=0.6.2",
    "uuid>=1.30"
]

[tool.pyright]
strict = ["."]
exclude = ["reactivex", ".venv"]
